Improvement in phonecontact module and text overflow issues

--- a/src/main/webapp/static/css/common-theme.css
+++ b/src/main/webapp/static/css/common-theme.css
@@ -140,6 +140,12 @@ input.error {
 .no-padding{
 	padding:0px;
 }
+.break-word{
+	word-wrap: break-word;
+}
+.overflow-auto{
+	overflow:auto;
+}
 ul.subnav-top-horizontal{
 	padding: 10px;
 }
@@ -173,10 +179,10 @@ ul.subnav-top-horizontal{
 
 /****************Contacts Start********************/
 #phonebookModal{
-	z-index:102;
+	z-index:1042;
 }
 
 #addConnectionModal{
-	z-index:101;
+	z-index:1041;
 }
 /****************Contacts Ends********************/
